--- a/app/views/artigos/index.html.erb
+++ b/app/views/artigos/index.html.erb
@@ -1,33 +1,9 @@
-<h1>Listing artigos</h1>
+<h1>Lista de Artigos</h1>
 
-<table>
-  <tr>
-    <th>Titulo</th>
-    <th>Corpo</th>
-    <th>Publicacao</th>
-    <th>Resumo</th>
-    <th>Localizacao</th>
-    <th>Usuario</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @artigos.each do |artigo| %>
-  <tr>
-    <td><%= artigo.titulo %></td>
-    <td><%= artigo.corpo %></td>
-    <td><%= artigo.publicacao %></td>
-    <td><%= artigo.resumo %></td>
-    <td><%= artigo.localizacao %></td>
-    <td><%= artigo.usuario_id %></td>
-    <td><%= link_to 'Show', artigo %></td>
-    <td><%= link_to 'Edit', edit_artigo_path(artigo) %></td>
-    <td><%= link_to 'Destroy', artigo, :confirm => 'Are you sure?', :method => :delete %></td>
-  </tr>
-<% end %>
-</table>
+<div id="artigos">
+	<%= render @artigos%>
+</div>
 
 <br />
 
-<%= link_to 'New Artigo', new_artigo_path %>
+<%= link_to 'Novo Artigo', new_artigo_path %>
