--- a/app/views/comentarios/_comentario.html.erb
+++ b/app/views/comentarios/_comentario.html.erb
@@ -1,9 +1,11 @@
 <%= div_for comentario do %>
 	<h3>
 		<%= comentario.nome %> &lt;<%= comentario.email %>&gt; disse: 
-		<span class='actions'>
-			<%= link_to "Delete", [@artigo, comentario], :confirm => "Confirma exclusão?", :method => :delete %>
-		</span>
+		<% if @artigo.proprio? current_user %>
+			<span class='actions'>
+				<%= link_to "Delete", [@artigo, comentario], :confirm => "Confirma exclusão?", :method => :delete %>
+			</span>
+		<% end %>	
 	</h3>
 	<%= comentario.corpo %>
 
