Inclusao de rotinas com AJAX

--- a/app/views/artigos/_artigo.html.erb
+++ b/app/views/artigos/_artigo.html.erb
@@ -9,5 +9,5 @@
 		<% end %>
 	</h3>
 	<%= simple_format artigo.corpo %>
-
+	<p style="font-size:10px"><%= publicacaoArtigo(artigo) %></p>
 <% end %>
