--- a/app/views/artigos/show.html.erb
+++ b/app/views/artigos/show.html.erb
@@ -2,8 +2,8 @@
 
 <div id="comentarios">
 	<h3>Comentários</h3>
-	<fieldset id="comentarios" class="comentarios">
-	<%= render @artigo.comentarios%>	
+	<fieldset id="fscomentarios" class="comentarios">
+		<%= render @artigo.comentarios%>	
 	</fieldset>
 </div> 
 <p>
