--- a/app/views/comentarios/new.js.erb
+++ b/app/views/comentarios/new.js.erb
@@ -1,2 +1,3 @@
 $("<%= escape_javascript render(:file => 'comentarios/new.html.erb') %>").insertAfter('#comentarios');
+$('#new_comentario').slideDown();
 $('#new_comentario_link').hide();
