--- a/app/views/usuarios/_form.html.erb
+++ b/app/views/usuarios/_form.html.erb
@@ -20,7 +20,7 @@
     <%= f.password_field :senha %>
   </div>
   <div class="field">
-    <%= f.label :senha_confirmation %><br />
+    <%= f.label :senha_confirmação %><br />
     <%= f.password_field :senha_confirmation %>
   </div>
   
